// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> renders default 1`] = `
<div
  className="f1hjws0q"
>
  <span
    className="f1qb1x6m"
    key="1"
  />
  <span
    className="fc6bjex"
    key="2"
  />
  <span
    className="fa44eki"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders inline 1`] = `
<div
  className="f1o6z6v3"
>
  <span
    className="f1qb1x6m"
    key="1"
  />
  <span
    className="fc6bjex"
    key="2"
  />
  <span
    className="fa44eki"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders inverted 1`] = `
<div
  className="f1hjws0q"
>
  <span
    className="f18v6v7s"
    key="1"
  />
  <span
    className="f193l1fj"
    key="2"
  />
  <span
    className="f1qye81g"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders large 1`] = `
<div
  className="f1hjws0q"
>
  <span
    className="f2u60k2"
    key="1"
  />
  <span
    className="ffthmud"
    key="2"
  />
  <span
    className="f5vp3zi"
    key="3"
  />
</div>
`;

exports[`<Loader /> renders static 1`] = `
<div
  className="fweo6zt"
>
  <span
    className="f1qb1x6m"
    key="1"
  />
  <span
    className="fc6bjex"
    key="2"
  />
  <span
    className="fa44eki"
    key="3"
  />
</div>
`;
